[package]
name = "esp-vtx-gs-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
pcap = "2.2.0"

[profile.release]
strip = true
lto = true
codegen-units = 1
